--- a/overseerr/config.yaml
+++ b/overseerr/config.yaml
@@ -3,7 +3,9 @@ version: 0.1.0
 slug: overseerr
 description: Request management and media discovery tool for the Plex ecosystem
 url: https://github.com/hassio-addons/addon-overseerr/tree/main/README.md
-codenotary: codenotary@frenck.dev
+ingress: true
+ingress_port: 1337
+ingress_stream: true
 webui: http://[HOST]:[PORT:5055]
 init: false
 arch:
