--- a/overseerr/config.yaml
+++ b/overseerr/config.yaml
@@ -19,3 +19,9 @@ map:
 #ports:
 #  5055/tcp: 5055
 image: ghcr.io/hassio-addons/overseerr/{arch}
+
+"environment": {
+  "OVERSEERR_HOST": "0.0.0.0",
+  "OVERSEERR_PORT": "5055"
+}
+
