--- a/overseerr/config.yaml
+++ b/overseerr/config.yaml
@@ -1,27 +1,22 @@
 name: Overseerr
-version: 0.1.0.1
+version: 0.1.0.2
 slug: overseerr
 description: Request management and media discovery tool for the Plex ecosystem
 url: https://github.com/jaws35smith/hassio-repository-test/blob/master/overseerr/README.md
 ingress: true
 ingress_port: 5055
 ingress_stream: true
-# webui: "http://[HOST]:[INGRESS_PORT]"
 init: false
 arch:
-- aarch64
-- amd64
-- armv7
+  - aarch64
+  - amd64
+  - armv7
 map:
-- addon_config:rw
-- share:rw
-- media:rw
-#ports:
-#  5055/tcp: 5055
+  - addon_config:rw
+  - share:rw
+  - media:rw
 image: ghcr.io/hassio-addons/overseerr/{arch}
 
-"environment": {
-  "OVERSEERR_HOST": "0.0.0.0",
-  "OVERSEERR_PORT": "5055"
-}
-
+environment:
+  OVERSEERR_HOST: "0.0.0.0"
+  OVERSEERR_PORT: "5055"
