--- a/overseerr/config.yaml
+++ b/overseerr/config.yaml
@@ -4,8 +4,8 @@ slug: overseerr
 description: Request management and media discovery tool for the Plex ecosystem
 url: https://github.com/jaws35smith/hassio-repository-test/blob/master/overseerr/README.md
 ingress: true
-ingress_port: 5055
-#ingress_stream: true
+ingress_port: 0
+ingress_stream: true
 init: false
 arch:
   - aarch64
@@ -17,6 +17,6 @@ map:
   - media:rw
 image: ghcr.io/hassio-addons/overseerr/{arch}
 
-environment:
-  OVERSEERR_HOST: "0.0.0.0"
-  OVERSEERR_PORT: "5055"
+#environment:
+#  OVERSEERR_HOST: "0.0.0.0"
+#  OVERSEERR_PORT: "5055"
